syntax = "proto3";

package com.webank.ai.fate.core.mlmodel.buffer;
option java_outer_classname = "DistillerMetaProto";


message DistillerParam {
  bool secure_aggregate = 1;
  int32 aggregate_every_n_epoch = 2;
  int32 batch_size = 3;
  int32 max_iter = 4;
  repeated string sched_dict = 5;

  string device = 6;
  bool pretrained = 7;
  string dataset = 8;
  string arch = 9;
  string lr = 10;
  string early_stop_eps = 11;
  bool post_train_quant = 12;
  int32 num_classes = 13;
  bool quant_aware_aggregate = 14;
}

message DistillerModelMeta {
  int32 aggregate_iter = 1;
  string module = 2;
  DistillerParam params = 100;
}